Review Request 0000 - committing a quick fix for feng to truncate with ellipsis long job displaynames - also DP-2836

--- a/le-ui/projects/leadprioritization/app/jobs/status/StatusStyles.scss
+++ b/le-ui/projects/leadprioritization/app/jobs/status/StatusStyles.scss
@@ -135,6 +135,12 @@ span.chevron-content.chevron-content-text {
     color: black;
     font-size: 15px;
     
+    span {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+    
     span.button {
         padding: 0;
         border-radius: 3px;
